# Bofus

./: Cargo.toml
assets/: player_info.ron  player_info2.ron  world_map.ron
assets/map/: -1,0_TileData.ron  -3,-6_TileData.ron  0,-1_TileData.ron  0,0_TileData.ron  0,1_TileData.ron  1,0_TileData.ron
assets/shaders/: grid.wgsl  player_shadow.wgsl
src/: main.rs  player.rs  save.rs  socket.rs
src/combat/: mod.rs  preparation.rs  ui.rs  your_turn.rs
src/exploration/: loading.rs  mod.rs  network.rs  path_finding.rs
src/loading/: mod.rs  node.rs
src/map/: debug.rs  loader.rs  mod.rs  tile.rs
src/map/chunk/: loader.rs  mod.rs
src/materials/: grid.rs  mod.rs  player_shadow.rs
src/ui/: chat.rs  context_menu.rs  input_catcher.rs  mod.rs  popup.rs
